--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang=”en”>
 <head>
-   <link rel="stylesheet" href="style.css">
-
+<link href=
+<script src=”https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js”></script>
+<link rel=”таблица стилей” href=”https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css” />
 </head>
 <body>
 <!-- NAVBAR -->
